# serializer version: 1
# name: test_create_for_a_non_design_space_with_normalization
  'The functions cannot take normalized inputs because a RandomSpace cannot be normalized.'
# ---
# name: test_requires_finite_bounds_is_checked_at_construction
  '_BoundedTransformation requires finite bounds, which these variables do not have: y.'
# ---
